MD system tray: Avoid adding separator as the first item of Bluetooth device list.

In pre-MD device list, TrayDetailsView::AddScrollSeparator() checked if the added
separator was the first item or not.
https://codesearch.chromium.org/chromium/src/ash/common/system/tray/tray_details_view.cc?q=TrayDetailsView::AddScrollSeparator&sq=package:chromium&l=430&dr=CSs
We should do the same check in MD version of Bluetooth device list, too.

BUG=675566

Review-Url: https://codereview.chromium.org/2582293003
Cr-Commit-Position: refs/heads/master@{#442473}

Former-commit-id: b613df596c63e3e69b4addaaa676e54877b8f261